--- a/config.yml
+++ b/config.yml
@@ -276,7 +276,7 @@ params:
   #
   # Recommended: png, bmp, jpg, or gif
   # for best browser support!
-  logo: logo.png
+  logo: crest.png
 
   # This is the description that is shown
   # on the footer and meta tags.
